# bevy_simple_websocket

./: .gitignore  Cargo.toml  LICENSE  Trunk.toml  index.html  readme.md
docs/: bevy_websocket_sync-41711786bda28182.js  bevy_websocket_sync-4deeab3d9b2f7e1d.js  bevy_websocket_sync-618521d8c5f7ee55.js  bevy_websocket_sync-724f5f0d1c5024e2.js  bevy_websocket_sync-76ce3aa64e89bbb9.js  bevy_websocket_sync-89f88fca1331963e.js  bevy_websocket_sync-a296ba3682518cec.js  bevy_websocket_sync-abcd5bd9591edfb6.js  bevy_websocket_sync-bd5b8235c2e8ac29.js  bevy_websocket_sync-c1e3c255cb3fc753.js  bevy_websocket_sync-c6b76282a152d5d7.js  bevy_websocket_sync-c8acb505e31c67b.js  bevy_websocket_sync-d19f55d5b1996494.js  bevy_websocket_sync-d9ad1675414c0b5d.js  bevy_websocket_sync-e5c748946e077df9.js  bevy_websocket_sync-ef494702c4717d15.js  bevy_websocket_sync-fce7514eb31123b.js  index.html
examples/: basic.rs
server/: package-lock.json  package.json  server.js
src/: console.rs  lib.rs  main.rs  websocket.rs  websocket_native.rs  websocket_shared.rs  websocket_wasm.rs
