[package]
name = "bevy_websocket_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
bevy = { version = "0.14.2", features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "multi_threaded",
] }
bevy-tokio-tasks = "0.14.0"
bincode = "1.3.3"
crossbeam-channel = "0.5.13"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures-channel = "0.3.31"
futures-util = "0.3.31"
js-sys = "0.3.72"
rand = "0.8.5"
serde = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
uuid = "1.11.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
    "WebSocket",
    "console",
    "Event",
    "MessageEvent",
    "BinaryType",
] }
