[package]
name = "bevy_simple_websocket"
version = "0.2.5"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "multi_threaded",
    "bevy_sprite",
    "png",
    "bevy_winit",
] }
bincode = "1.3.3"
crossbeam-channel = "0.5.13"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
rand = "0.8.5"
serde = "1.0.213"
serde_json = "1.0.132"
uuid = "1.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
bevy-tokio-tasks = "0.14.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
    "WebSocket",
    "console",
    "Event",
    "MessageEvent",
    "BinaryType",
] }
